# cascii

./: .gitignore  AUTO_RELEASE.md  CANCEL.MD  Cargo.toml  DEDUP.MD  LIBRARY.md  LICENSE  PUBLISHING.md  README.md  RELEASE_QUICKSTART.md  TODO.MD  TODO_1.MD  TODO_2.MD  example_output.txt  example_output_small.txt  install.sh  rustfmt.toml  source.sh  ssmver.toml  test.sh
.github/workflows/: auto-release.yml  ci.yml  manual-release.yml  publish.yml  release.yml
examples/: simple_image.rs  simple_video.rs
resources/: cascii.json
scripts/: auto_version.sh  benchmark_fit_cell_backgrounds.sh  bump_version.py  compare_background_image.sh  compare_background_modes.sh
src/: background_fit_optimized.rs  cell_filter.rs  color_shift.rs  convert.rs  crop.rs  frame.rs  lib.rs  loop_detect.rs  main.rs  packed.rs  preprocessing.rs  render.rs  video.rs
