[package]
name = "cascii"
version = "0.3.0"
edition = "2021"
description = "High-performance ASCII art generator for images and videos"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cascii/cascii"
keywords = ["ascii", "art", "video", "image", "converter"]
categories = ["multimedia::video", "multimedia::images", "command-line-utilities"]

[lib]
name = "cascii"
path = "src/lib.rs"

[[bin]]
name = "cascii"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
indicatif = { version = "0.17", features = ["rayon"] }
rayon = "1.10"
walkdir = "2.5"
dirs = "5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
